--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,7 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Ubuntu:wght@300;400;500;700&display=swap');
+
 @import "clear";
+
+@mixin mobile {
+    @media (max-width:500px){
+        @content;
+    }
+}
 
 @mixin ipad {
     @media (max-width:700px){
+        @content;
+    }
+}
+
+@mixin laptop {
+    @media (max-width:1200px){
         @content;
     }
 }
@@ -14,21 +28,24 @@
 
 
 body{
-    font-family: sans-serif;
     background-image: linear-gradient(45deg, #FBDA61 0%, #FF5ACD 100%);
     min-height: 100vh;
-
+    font-family: 'Poppins', sans-serif;
 }
 
 .container{
     display: flex;
     flex-direction: column;
     background: white;
-    max-width: 115rem;
+    max-width: 110rem;
     margin: 4vw auto;
     min-height: 70vh;
     border-radius: 6px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+    @include laptop{
+        margin: auto;
+        min-height: 100vh;
+    }
 }
 
 //  grid-are ve grid-template-area kullanımı
@@ -137,6 +154,10 @@ main{
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
     height: 100%;
+    flex-grow: 1;
+    @include laptop{
+        grid-template-columns: 1fr;
+    }
     
     section{
         height: 100%;
@@ -169,19 +190,185 @@ main{
                 h4{
                     color: rgba(0, 0, 0, 0.664);
                     white-space: nowrap;
-                    max-width: 350px;
+                    max-width: 200px;
                     overflow: hidden;
                     text-overflow: ellipsis;
+                    @include laptop{
+                        max-width: 500px;
+                    }
                 }
             }
         }
     }
-    .recipe{
-        background: #f9f5f3;
-    }
-    .shopping{
+    
 
+    
+}
+.recipe{
+    background: #f9f5f3;
+}
+.recipe figure{
+    height: 300px;
+    position: relative;
+    &::before{
+        content: "";
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        background-image: linear-gradient(90deg, #A9C9FF 0%, #FFBBEC 100%);
+        opacity: .4;
     }
+
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    h1{
+        position: absolute;
+        bottom: 0;
+        left: 40%;
+        transform: translate(-40% 20%);
+        transform: skewY(-6deg);
+        color: white;
+        font-weight: 600;
+        background-image: linear-gradient(90deg, #A9C9FF 70%, #FFBBEC 100%);
+        white-space: nowrap;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.562);
+        padding: 10px 30px;
+        font-family: 'Ubuntu', sans-serif;
+    }
+
+    .like-area{
+    display: flex;
+    justify-content: end;
+    padding: 20px;
+    i{
+        font-size: 24px;
+        padding: 5px;
+        border-radius: 5px;
+        transition: all 300ms;
+        cursor: pointer;
+        &:hover{
+            transform: scale(0.9);
+        }
+    }    
+    }
+}
+.recipe .ingredients{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 40px;
+    margin: 40px 0 0;
+    ul{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        row-gap: 20px;
+        column-gap: 40px;
+        width: 90%;
+        margin: 0 auto;
+        @include ipad{
+            grid-template-columns: 1fr;
+        }
+
+        li{
+            list-style: none;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            i{
+                color: #91b8fd;
+            }
+            p{
+                white-space: nowrap;
+                max-width: 289px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                @include ipad{
+                    max-width: 450px;
+                }
+                @include mobile(){
+                    max-width: 300px;
+                }
+            }
+        }
+    }
+
+    button{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        cursor: pointer;
+        margin-top: 30px;
+        padding: 10px;
+        color: white;
+        font-weight: 600;
+        background-image: linear-gradient(90deg, #A9C9FF 70%, #FFBBEC 100%);
+        transition: all 300ms;
+        max-width: 500px;
+        margin: 50px auto;
+        width: 100%;
+        font-size: 15px;
+        span,i{
+            pointer-events: none;
+        }
+        i{
+            font-size: 20px;
+        }
+        &:hover{
+            scale: .95;
+        }
+    }
+}
+
+.recipe .directions{
+    text-align: center;
+    padding-bottom: 40px;
+    h2{
+        transform: skewY(-3deg);
+        font-weight: 600;
+        color: #eb56c1de;
+        font-family: "ubuntu";
+        font-size: 30px;
+        text-shadow: 0 0 10px #FFBBEC;
+        
+    }
+    p{
+        padding: 50px;
+        span{
+            color: #c088b0;
+        }
+    }
+    a{
+        padding: 10px 30px;
+        border: 1px solid #A9C9FF;
+        border-radius: 30px;
+        transition: all 300ms;
+        &:hover{
+            background-color: #1d3e77;
+            color: white;
+        }
+    }
+}
+
+.shopping{
+    padding: 5px 2px;
+    h2{
+        font-family: "ubuntu";
+        text-align: center;
+        color: #A9C9FF;
+    }
+    ul{
+     overflow-x: auto;
+    li{
+        list-style: none;
+    }
+ }
 }
 
 //loader
