--- a/styles/style.css
+++ b/styles/style.css
@@ -127,6 +127,11 @@ header .likes {
   font-size: 25px;
   cursor: pointer;
   margin-left: 60px;
+  position: relative;
+}
+header .likes:hover > .list {
+  visibility: visible;
+  opacity: 1;
 }
 @media (max-width: 700px) {
   header .likes {
@@ -138,6 +143,37 @@ header .likes i {
 }
 header .likes i:hover {
   color: rgba(128, 128, 128, 0.795);
+}
+header .likes .list {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  bottom: -330px;
+  background: rgb(150, 144, 144);
+  border-radius: 20px;
+  padding: 10px;
+  min-height: 140px;
+  min-width: 220px;
+  transition: opacity 1s, visibility 0.3s;
+  z-index: 1000;
+}
+header .likes .list a {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.459);
+  padding: 3px;
+}
+header .likes .list a img {
+  height: 70px;
+  width: 50px;
+  border-radius: 50%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+header .likes .list a p {
+  font-size: 15px;
+  color: white;
 }
 
 main {
@@ -356,12 +392,38 @@ main .results .result-link .data h4 {
   font-family: "ubuntu";
   text-align: center;
   color: #A9C9FF;
+  margin: 30px;
+}
+.shopping .button-area {
+  display: flex;
+  justify-content: end;
+}
+.shopping .button-area button {
+  display: none;
+  gap: 5px;
+  background-color: rgba(255, 0, 0, 0.692);
+  color: white;
+  cursor: pointer;
+  transition: scale 0.3s;
+}
+.shopping .button-area button:hover {
+  scale: 0.9;
 }
 .shopping ul {
   overflow-x: auto;
 }
 .shopping ul li {
   list-style: none;
+  padding: 5px;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.199);
+}
+.shopping ul li i {
+  cursor: pointer;
+  color: rgb(241, 98, 122);
+}
+
+#like-btn {
+  color: rgba(255, 0, 0, 0.568);
 }
 
 .loader {
