--- a/styles/style.scss
+++ b/styles/style.scss
@@ -136,6 +136,11 @@ header{
         font-size: 25px;
         cursor: pointer;
         margin-left: 60px;
+        position: relative;
+        &:hover > .list{
+            visibility: visible;
+            opacity: 1;
+        }
         @include ipad{
             margin-left: unset;
         }
@@ -145,9 +150,40 @@ header{
                 color: rgba(128, 128, 128, 0.795);
             }
         }
+        .list{
+            visibility: hidden;
+            opacity: 0;
+            position: absolute;
+            bottom: -330px;
+            background: rgb(150, 144, 144);
+            border-radius: 20px;
+            padding: 10px;
+            min-height: 140px;
+            min-width: 220px;
+            transition: opacity 1s, visibility .3s;
+            z-index: 1000;
+            a{
+                display: flex;
+                align-items: center;
+                gap: 5px;
+                border-bottom: 1px solid rgba(255, 255, 255, 0.459);
+                padding: 3px;
+                img{
+                    height: 70px;
+                    width: 50px;
+                    border-radius: 50%;
+                    object-fit: contain;
+
+                }
+                p{
+                    font-size: 15px;
+                    color: white;
+                }
+            }
+        }
     }
 }
-//! Header SCSS START
+//! Header SCSS END
 
 //! Main Section SCSS START
 main{
@@ -362,13 +398,40 @@ main{
         font-family: "ubuntu";
         text-align: center;
         color: #A9C9FF;
+        margin: 30px;
+    }
+    .button-area{
+        display: flex;
+        justify-content: end;
+        button{
+            display: none;
+            gap: 5px;
+            background-color: rgba(255, 0, 0, 0.692);
+            color: white;
+            cursor: pointer;
+            transition: scale .3s;
+            &:hover{
+                scale: 0.9;
+            }
+        }
     }
     ul{
      overflow-x: auto;
     li{
         list-style: none;
+        padding: 5px;
+        border-bottom: 1px solid rgba(128, 128, 128, 0.199);
+        i{
+            cursor: pointer;
+            color: rgb(241, 98, 122);
+        }
     }
  }
+}
+
+// like Button
+#like-btn{
+    color: rgba(255, 0, 0, 0.568);
 }
 
 //loader
@@ -379,4 +442,4 @@ main{
         
     }
 }
-//! Main Section SCSS START
+//! Main Section SCSS END
